data/policies/v1.0/02_mortgage_eligibility.md
---
document_id: DB-MG
document_title: DemoBank Residential Mortgage Eligibility Policy
policy_version: "1.0"
status: superseded
effective_from: 2023-01-01
effective_to: 2025-06-30
owner: DemoBank Secured Lending Policy (fictional)
---

# DEMO BANK - SYNTHETIC DOCUMENT - FOR EDUCATIONAL USE ONLY

**Synthetic content created for an educational capstone project. DemoBank does
not exist. Do not rely on any figure in this document.**

## MG-1.1 Purpose and scope

This policy sets out pre-qualification criteria for the DemoBank Residential
Mortgage, secured by a first charge over an owner-occupied residential
property. Buy-to-let and commercial property lending are out of scope.

## MG-2.1 Applicant age

The applicant must be at least **21 years of age** and no more than **65 years
of age** at the date of application, so that the scheduled term ends before the
expected retirement age used in DemoBank affordability modelling.

## MG-2.2 Residency status

The applicant must be a citizen, a permanent resident, or a long-term visa
holder with a residual visa term of at least 24 months.

## MG-3.1 Minimum income

Gross verifiable annual income must be at least **36,000 currency units** for a
sole application.

## MG-3.2 Employment stability

The applicant must have at least **12 consecutive months** in the current
employment or trading arrangement, and must be in full time, part time, self
employed or contract work.

## MG-4.1 Loan amount limits

The Residential Mortgage is offered between **50,000 and 750,000 currency
units**.

## MG-4.2 Income multiple cap

The requested loan amount must not exceed **5.5 times** gross verifiable annual
income.

## MG-5.1 Maximum loan to value

The loan amount must not exceed **90% of the lower of purchase price and
valuation**, equivalent to a minimum deposit of **10%**.

## MG-5.2 Property valuation

An independent valuation is required before a formal offer. For
pre-qualification the applicant's stated property value may be used, and the
outcome must be presented as conditional on valuation.

## MG-5.3 Payment assumptions used in assessment

Indicative monthly repayments are calculated on a standard amortising basis
using a representative annual interest rate of **6.90%** and a default
assessment term of **360 months**.

## MG-6.1 Outcome categories

The four outcome categories in section PL-5.1 of the Unsecured Personal Loan
policy apply equally to mortgage pre-qualification.
