data/policies/v2.0/02_mortgage_eligibility.md
---
document_id: DB-MG
document_title: DemoBank Residential Mortgage Eligibility Policy
policy_version: "2.0"
status: active
effective_from: 2025-07-01
effective_to: null
owner: DemoBank Secured Lending Policy (fictional)
supersedes: "1.0"
---

# DEMO BANK - SYNTHETIC DOCUMENT - FOR EDUCATIONAL USE ONLY

**Synthetic content created for an educational capstone project. DemoBank does
not exist. Do not rely on any figure in this document.**

## MG-1.1 Purpose and scope

This policy sets out pre-qualification criteria for the DemoBank Residential
Mortgage, secured by a first charge over an owner-occupied residential
property.

## MG-1.3 Summary of changes from version 1.0

- Maximum loan to value reduced from 90% to **85%** (MG-5.1).
- New first-time buyer concession permitting up to 90% loan to value where the
  credit score is 720 or above (MG-5.4).
- Income multiple cap reduced from 5.5x to **5.0x** (MG-4.2).
- New reserves supporting criterion (MG-6.2).
- Minimum credit score raised from 660 to 680 and maximum debt-to-income
  reduced from 43% to 40% by the Credit and Affordability Standards v2.0.

## MG-2.1 Applicant age

The applicant must be at least **21 years of age** and no more than **65 years
of age** at the date of application.

## MG-2.2 Residency status

The applicant must be a citizen, a permanent resident, or a long-term visa
holder with a residual visa term of at least 24 months.

## MG-3.1 Minimum income

Gross verifiable annual income must be at least **36,000 currency units** for a
sole application.

## MG-3.2 Employment stability

At least **12 consecutive months** in the current employment or trading
arrangement is required.

## MG-4.1 Loan amount limits

The Residential Mortgage is offered between **50,000 and 750,000 currency
units**.

## MG-4.2 Income multiple cap

The requested loan amount must not exceed **5.0 times** gross verifiable annual
income.

## MG-5.1 Maximum loan to value

The loan amount must not exceed **85% of the lower of purchase price and
valuation**, equivalent to a minimum deposit of **15%**, except where the
first-time buyer concession in section MG-5.4 applies.

## MG-5.2 Property valuation

An independent valuation is required before a formal offer. For
pre-qualification the applicant's stated property value may be used, and the
outcome must be presented as conditional on valuation.

## MG-5.3 Payment assumptions used in assessment

Indicative monthly repayments are calculated on a standard amortising basis
using a representative annual interest rate of **6.90%** and a default
assessment term of **360 months**.

## MG-5.4 First-time buyer concession

A first-time buyer may be pre-qualified at a loan to value of up to **90%**
where the internal credit score is **720 or above**. All other hard criteria,
including the debt-to-income and stressed affordability tests, continue to apply
without relaxation.

## MG-6.1 Outcome categories

The four outcome categories in section PL-5.1 of the Unsecured Personal Loan
policy apply equally to mortgage pre-qualification.

## MG-6.2 Reserves

The applicant is expected to hold liquid savings, after payment of the deposit
and fees, of at least **three times** the indicative monthly mortgage
repayment. A shortfall, or an undeclared savings position, is a supporting
criterion failure.
